--- a/blog.css
+++ b/blog.css
@@ -1,5 +1,58 @@
 body {
-	background-image: url(../blog/Untitled\ drawing.png);
+	background-image: url(../blog/paradise-1110498_960_720.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 40rem;
+}
+
+h1 {
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 4rem;
+	color: rgb(196, 196, 196);
+	text-align: center;
+	margin: 0 0 1rem 0;
+}
+
+li {
+	text-align: left;
+	display: inline-block;
+	font-family: sans-serif;
+	font-size: 20px;
+	font-style: italic;
+	padding: 1rem;
+}
+
+li:hover {
+	text-align: left;
+	display: inline-block;
+	background-color: tomato;
+	border-radius: 50% 50%;
+	text-decoration: none;
+	transition: 1s;
+	padding: 2rem;
+}
+
+a {
+	color: white;
+	text-decoration: none;
+}
+
+
+footer a {
+	font-size: 1.2rem;
+	color: rgb(78, 0, 0);
+	padding: .4rem .4rem;
+	border-radius: .8rem;
+	text-decoration: none;
+	transition: 1s;
+	background-color: rgb(255, 255, 255);
+}
+
+footer a:hover {
+	font-size: 1.5rem;
+	color: rgb(0, 17, 116);
+	padding: 1rem 1rem;
+	background-color: rgb(255, 96, 4);
+	border-radius: 1rem;
+	text-decoration: none;
+	transition: 1s;
 }
