--- a/about_me.css
+++ b/about_me.css
@@ -1,3 +1,9 @@
+:root {
+	--yellow-color: yellow;
+	--white-color: white;
+	--value: 2rem;
+}
+
 body {
 	background-color: rgb(46, 46, 46);
 }
@@ -5,61 +11,60 @@ body {
 h1 {
 	font-family: 'Times New Roman', Times, serif;
 	text-align: center;
-	font-size: 3rem;
+	font-size: calc(var(--value) * 1.5);
 	display: inline-flexbox;
-	color: yellow;
-	text-shadow: yellow;
+	color: var(--yellow-color);
 }
 
 h1::before {
 	content: url(../blog/0541.png);
 	display: inline-block;
-	width: 3rem;
-	height: 1rem;
+	width: calc(var(--value) * 1.5);
+	height: calc(var(--value) / 2);
 }
 
 h1::after {
 	content: url(../blog/0541.png);
 	display: inline-block;
-	width: 2rem;
-	height: 1rem;
+	width: calc(var(--value) * 1);
+	height: calc(var(--value) / 2);
 }
 
 
 img {
-    width: 20rem;
-		height: 30rem;
-		float: left;
-		border-radius: 2rem;
+	width: calc(var(--value) * 10);
+	height: calc(var(--value) * 15);
+	float: left;
+	border-radius: calc(var(--value) / 1);
 }
 
 section:nth-of-type(2) {
 	display: flex;
 	flex-direction: column;
-	padding-inline-start: 3rem;
-	color: white;
-	margin: 0rem;
+	padding-inline-start: calc(var(--value) / 1.5);
+	color: var(--white-color);
+	margin: calc(var(--value) / 0);
 }
 
 section:nth-of-type(3) {
 	display: flex;
 	flex-direction: column;
-	padding-inline-start: 3rem;
-	color: white;
-	margin: 0rem;
+	padding-inline-start: calc(var(--value) / 1.5);
+	color: var(--white-color);
+	margin: calc(var(--value) / 0);
 }
 
 li {
 	list-style: none;
-	margin-inline-start: -2.5rem;
+	margin-inline-start: calc(var(--value) * -1.25);
 }
 
 h3 a {
 	display: inline-flexbox;
-	padding: .5rem .5rem;
+	padding: calc(var(--value) / 4) calc(var(--value) / 4);
 	color: rgb(7, 88, 0);
 	background-color: rgb(255, 208, 0);
-	border-radius: .25rem;
+	border-radius: calc(var(--value) / 8);
 	font-weight: 800;
 	text-decoration: none;
 }
@@ -67,10 +72,10 @@ h3 a {
 
 footer h3 a:hover {
 	display: inline-flexbox;
-	padding: 1rem 1rem;
+	padding: calc(var(--value) / 2) calc(var(--value) / 2);
 	color: rgb(255, 251, 0);
 	background-color: rgb(153, 0, 120);
-	border-radius: .25rem;
+	border-radius: calc(var(--value) / 8);
 	font-weight: 800;
 	text-decoration: none;
 	transition: 1s;
